[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/Turret_1.png" type="Texture" id=1]
[ext_resource path="res://Defence/TurretCannon.gd" type="Script" id=2]
[ext_resource path="res://Enemies/laserLarge_003.ogg" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 300.0

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 3 )
random_pitch = 1.3

[node name="TurretCannon" type="StaticBody2D"]
collision_layer = 4
collision_mask = 10
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Turret" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 2, 0 )
vframes = 2

[node name="Muzzle" type="Position2D" parent="Turret"]
position = Vector2( 29, 0 )

[node name="RayCast2D" type="RayCast2D" parent="Turret"]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 300, 0 )
collision_mask = 11

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
frame = 1

[node name="Turret_Vision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Turret_Vision"]
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="ShootFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 3 )
bus = "SoundEffects"

[node name="TargetRefreshTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_exited" from="Turret_Vision" to="." method="_on_Turret_Vision_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_Timer_timeout"]
